[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bsl"
version = "0.1.0"
description = "Behavioral-Standard-Library: A modular, terminal-agnostic Human Execution Framework built to run on Android via Termux/Ubuntu."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Jules", email="jules@example.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["src"]
